# ai-driven-invention-03d7-gemini

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.claude/skills/paper-finder/scripts/: find_papers.py
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  README.md
logs/: execution_gemini_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_gemini_transcript.jsonl  session_instructions.txt
paper_draft/: main.tex  references.bib
paper_draft/commands/: macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
papers/: README.md
papers/pages/: 2023_Merchant_GNoME_manifest.txt  2025_Buehler_AtomAgents_manifest.txt
results/: all_experiments.json  summary.json
src/: analysis.py  experiment.py
